# tisim

./: CMakeLists.txt  DFM37UX287  DFM37UX287-v4l2  DMK37BUX287  PracticalSocket.cpp  PracticalSocket.h  README.md  config.h  index.html  ketek.cpp  tisim-avt.cpp  tisim-capture.cpp  tisim-drone.cpp  tisim-global.cpp  tisim-recv.cpp  tisim-send.cpp  tisim-trigger.c  tisim-yolo.cpp  tisim.cpp  v4ldevice.cpp  yolov3-tiny.cfg
grab/: config.h  test.cpp
tisim-pantilt/: config.h  gpio.h  spi_ad.h  tisim-pantilt.cpp
tisim-stft/: Makefile  config.h  recv.cpp  send.cpp  sender.cpp  v4ldevice.cpp
tisim-vc/: tisimvc-recv.cpp  tisimvc-send.cpp
