cmake_minimum_required(VERSION 3.5)
project( tisim_network )
find_package( OpenCV REQUIRED )
add_executable( tisim-recv tisim-recv.cpp PracticalSocket.cpp )
target_link_libraries( tisim-recv ${OpenCV_LIBS} )
add_executable( tisim-send tisim-send.cpp PracticalSocket.cpp )
target_link_libraries( tisim-send ${OpenCV_LIBS} )
add_executable( tisim-global tisim-global.cpp PracticalSocket.cpp )
target_link_libraries( tisim-global ${OpenCV_LIBS} )
add_executable( tisim-capture tisim-capture.cpp PracticalSocket.cpp )
target_link_libraries( tisim-capture ${OpenCV_LIBS} )
add_executable( tisim-yolo tisim-yolo.cpp PracticalSocket.cpp )
target_link_libraries( tisim-yolo ${OpenCV_LIBS} darknet)
add_executable( tisim-trigger tisim-trigger.c)
